--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation "io.ktor:ktor-auth-jwt:$ktor_version"
     implementation "io.ktor:ktor-jackson:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    implementation "org.ktorm:ktorm-core:$ktorm_version"
 }
