--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -1,15 +1,16 @@
+apply plugin: 'kotlin'
+apply plugin: 'application'
+
 buildscript {
     repositories {
         jcenter()
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'application'
 
 group 'org.meowcat'
 version '0.0.1'
@@ -35,10 +36,10 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "io.ktor:ktor-server-core:$ktor_version"
     implementation "io.ktor:ktor-html-builder:$ktor_version"
-    implementation "org.jetbrains:kotlin-css-jvm:1.0.0-pre.31-kotlin-1.2.41"
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-auth-jwt:$ktor_version"
     implementation "io.ktor:ktor-jackson:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     implementation "org.ktorm:ktorm-core:$ktorm_version"
+    implementation 'mysql:mysql-connector-java:8.0.22'
 }
