--- a/back-end/resources/application.conf
+++ b/back-end/resources/application.conf
@@ -7,3 +7,16 @@ ktor {
         modules = [ org.meowcat.ApplicationKt.module ]
     }
 }
+
+mysql {
+    address = localhost
+    port = 3306
+    database = "mychat"
+    user = "root"
+    password = "X*2Jzh.m;Mrj"
+}
+
+jwt {
+    issuer = "mychat.io"
+    secret = "zAP5MBA4B4Ijz0MZaS48"
+}
