--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 
 
-group 'org.meowcat'
+group 'moe.itsusinn.mychat'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
 
