--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -43,7 +43,6 @@ dependencies {
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     implementation "org.ktorm:ktorm-core:$ktorm_version"
     implementation 'mysql:mysql-connector-java:8.0.22'
-    implementation "io.ktor:ktor-server-sessions:$ktor_version"
-    implementation "io.ktor:ktor-client-core:$ktor_version"
-    implementation "io.ktor:ktor-client-cio:$ktor_version"
+
+    implementation 'org.redisson:redisson:3.13.6'
 }
