--- a/back-end/resources/application.conf
+++ b/back-end/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ org.meowcat.ApplicationKt.module ]
+        modules = [ moe.itsusinn.mychat.ApplicationKt.module ]
     }
 }
 
